some changes css

--- a/Front-end/src/components/CreateVideo.css
+++ b/Front-end/src/components/CreateVideo.css
@@ -1,6 +1,6 @@
 /* Background styling */
 .blog-post-form {
-  background-image: url('../../public/assets/images.jpg'); /* Add your background image here */
+  background-image: url('../../public//v2.jpg'); /* Add your background image here */
   background-size: cover;
   background-position: center;
   padding: 50px 20px;
